# teamspeak-tts.rs

./: .gitignore  Cargo.toml  README.md  build.rs  config.toml.default
.github/workflows/: main.yml
src/: cache.rs  config.rs  connection.rs  index.html  main.rs  tts.rs  types.rs  web.rs
src/audio_utils/: audio_to_ts.rs  mod.rs  ts_to_audio.rs
src/html/: index.html  mstts.js  split.py
