[package]
name = "teamspeak-tts"
version = "1.0.0-rc"
edition = "2021"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["http2", "macros"] }
clap = { version = "4", features = ["derive", "cargo"] }
env_logger = "0.11"
futures = "0.3"
log = "0.4"
reqwest = "0.12"
serde = { version = "1", features = ["derive"] }
symphonia = "0.5"
tap = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
toml = "0.8"
tsclientlib = { git = "https://github.com/ReSpeak/tsclientlib" }
tsproto = { git = "https://github.com/ReSpeak/tsclientlib" }
tsproto-packets = { git = "https://github.com/ReSpeak/tsclientlib" }
