[package]
name = "teamspeak-tts"
version = "1.0.0-rc.4"
edition = "2021"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["http2", "macros"] }
clap = { version = "4", features = ["derive", "cargo"] }
env_logger = "0.11"
futures = "0.3"
log = { version = "0.4", features = [
    "max_level_trace",
    "release_max_level_debug",
] }
reqwest = "0.12"
serde = { version = "1", features = ["derive"] }
symphonia = "0.5"
tap = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
toml = "0.8"
tsclientlib = { git = "https://github.com/ReSpeak/tsclientlib" }
tsproto = { git = "https://github.com/ReSpeak/tsclientlib" }
tsproto-packets = { git = "https://github.com/ReSpeak/tsclientlib" }
rand = "0.8"
spin_sleep = { version = "1.2.1", optional = true }
rusty-leveldb = { version = "3.0.0" }
kstool-helper-generator = "0.4.4"

[features]
spin-sleep = ["spin_sleep"]
full = ["spin-sleep"]
