[package]
name = "teamspeak-tts"
version = "2.2.2"
homepage = "https://github.com/KunoiSayami/teamspeak-tts.rs"
edition = "2021"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["http2", "macros"] }
clap = { version = "4", features = ["derive", "cargo"] }
env_logger = "0.11"
futures = "0.3"
kstool-helper-generator = "0.4.4"
log = { version = "0.4", features = [
    "max_level_trace",
    "release_max_level_debug",
] }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = [
    "http2",
    "stream",
    "hickory-dns",
    "socks",
] }
rusty-leveldb = { version = "3.0.0" }
serde = { version = "1", features = ["derive"] }
spin_sleep = { version = "1.2.1", optional = true }
symphonia = "0.5"
tap = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
toml = "0.8"
tsclientlib = { git = "https://github.com/ReSpeak/tsclientlib", default-features = false }
tsproto = { git = "https://github.com/ReSpeak/tsclientlib" }
tsproto-packets = { git = "https://github.com/ReSpeak/tsclientlib" }
xxhash-rust = { version = "0.8.12", features = ["xxh3"] }

[features]
default = ["full"]
rustls = ["reqwest/rustls-tls"]
spin-sleep = ["spin_sleep"]
full = ["spin-sleep", "rustls"]
measure-time = []
